--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     .board{max-width:520px;margin:0 auto;padding:12px;display:grid;gap:10px;grid-template-columns:repeat(4,1fr)}
     button.card{aspect-ratio:1/1;border:0;border-radius:14px;background:rgba(255,255,255,.08);
       color:#e8eeff;font-size:34px;display:grid;place-items:center}
-    .hidden{color:transparent}
+.hidden{background:rgba(255,255,255,.08); color:transparent}
     .top{display:flex;justify-content:center;gap:12px;padding:0 16px 10px;color:#a8b3d6}
     .pill{background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.08);padding:8px 12px;border-radius:999px}
   </style>
