--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         btn.type = "button";
         btn.dataset.icon = icon;
         btn.dataset.idx = String(idx);
-        btn.textContent = icon; // caché via .hidden
+btn.textContent = "?";
+btn.dataset.real = icon;
         btn.addEventListener("click", () => flip(btn));
         board.appendChild(btn);
       });
